--- a/popup.html
+++ b/popup.html
@@ -20,18 +20,14 @@
         </li>
         <li>
           <label for="ui">اتجاه الواجهة</label>
-          <span>(تحت التجربة)</span>
           <select id="ui">
             <option hidden value=""></option>
             <option value="RTL">RTL</option>
             <option value="LTR">LTR</option>
           </select>
         </li>
-        <li>
-          <label for="ui">ترجمة</label>
-          <span>(تحت التجربة)</span>
-        </li>
       </ul>
+      <h3>إذا لم يعمل، فأعد تحميل الصفحة</h3>
     </section>
   </body>
 </html>
